--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,16 +10,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Update the download script
-      run: cp scripts/download-files.sh /home/ubuntu/executables/download-files.sh
+    #- name: Update the download script
+     # run: cp scripts/download-files.sh /home/ubuntu/executables/download-files.sh
     - name: Build with Maven
       run: mvn clean package
-    - name: Execute Flink
-      run: |
-        cp target/impro-event-monitoring-0.1.jar /home/ubuntu/executables/impro-event-monitoring-0.1.jar
-        cd /home/ubuntu/
-        ./Downloads/flink-1.9.1/bin/flink run ./executables/impro-event-monitoring-0.1.jar \
-                     --input /home/ubuntu/source/ --output /home/ubuntu/results/results.csv
+    #- name: Execute Flink
+     # run: |
+      #  cp target/impro-event-monitoring-0.1.jar /home/ubuntu/executables/impro-event-monitoring-0.1.jar
+       # cd /home/ubuntu/
+        #./Downloads/flink-1.9.1/bin/flink run ./executables/impro-event-monitoring-0.1.jar \
+         #            --input /home/ubuntu/source/ --output /home/ubuntu/results/results.csv
 
         
         
