--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "scripts/impro-gdelt-downloader"]
-	path = scripts/impro-gdelt-downloader
+[submodule "impro-gdelt-downloader"]
+	path = impro-gdelt-downloader
 	url = https://gitlab.com/dfunke/impro-gdelt-downloader.git
